--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
@@ -25,9 +25,9 @@
 
     %VER QUE A1 TAMBIEN SE PUEDE HACER REVISANDO SI LA LINEA ESTA UTILIZADA O NO
 
-	\newAlternative{A1: La venta a la cual pertenece la linea no se encuentra en estado "En edición".}{3} %Flujo alternativo A1.
+	\newAlternative{A1: La venta a la cual pertenece la linea no se encuentra en estado `En creación'.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede modificar la linea de venta ya que la venta no se encuentra en estado "En edición".}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede modificar la linea de venta ya que la venta no se encuentra en estado `En creación'.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
