--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex
@@ -1,5 +1,5 @@
 
-\renewcommand{\caseUseShortName}{modificarUbicación} %cammelCase name
+\renewcommand{\caseUseShortName}{modificarUbicacion} %cammelCase name
 
 \renewcommand{\caseUseCreated}{11/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{11/02/2020} %Fecha modificación
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion modificar una ubicación.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere modificar una ubicación.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUlistarUbicaciones (Listar ubicaciones).}%Precondiciones
+	\caseUseRow{Haber realizado con éxito el \CUlistarUbicaciones\ (Listar ubicaciones).}%Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
