--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor crear una linea de presupuesto para un presupuesto determinado.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere crear una linea de presupuesto.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUbuscarAvanzadoPresupuestos (Buscar avanzado presupuestos)} %Precondiciones
+	\caseUseRow{Estar ejecutando el \CUcrearPresupuesto (Crear presupuesto) o el \CUmodificarPresupuesto (Modificar presupuesto).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Si el producto, tela y lustre no pertenece a ningún producto final existente se ejecuta el \CUcrearProductoFinal\ (Crear producto final) con el producto, tela y lustre seleccionados.} %Postcondiciones
@@ -19,7 +19,7 @@
     \addCaseUseStep{El vendedor selecciona producto, tela, lustre y la cantidad solicitada.}
     \addCaseUseStep{ZMGestion autocompleta el campo precio unitario con el precio actual del producto seleccionado con la tela solicitada. Si el vendedor cuenta con los permisos necesario para modificar este campo se le permite la edición, caso contrario se le muestra el campo deshabilitado con el precio.}
     \addCaseUseStep{El vendedor cuenta con los permisos necesarios y modifica el precio.}
-    \addCaseUseStep{ZMGestion crea la linea de presupuesto y la asocia al presupuesto seleccionado.}
+    \addCaseUseStep{ZMGestion crea la linea de presupuesto en estado "Pendiente" y la asocia al presupuesto seleccionado.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: La cantidad solicitada es menor o igual a cero.}{3} %Flujo alternativo A1.
@@ -32,6 +32,13 @@
     \caseUseRow{La secuencia A2 comienza luego del punto 5 del escenario principal.}%¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que no cuenta con los permisos necesarios para modificar el precio unitario.}
     \caseUseRow{El escenario vuelve al punto 4.}
+
+    \caseUseRow{}
+    \newAlternative{A3: El producto, tela y lustre indicado ya se encuentra en el presupuesto.}{3} %Flujo alternativo A3.
+    \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos lineas idénticas al presupuesto.}
+    \caseUseRow{El escenario vuelve al punto 2.}
+    \caseUseRow{}
 }
 
 \item Caso de uso \caseUseName
