--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex
@@ -25,9 +25,9 @@
 
     %VER QUE A1 TAMBIEN SE PUEDE HACER REVISANDO SI LA LINEA ESTA UTILIZADA O NO
 
-	\newAlternative{A1: El presupuesto al cual pertenece la linea se encuentra en estado "Vendido".}{3} %Flujo alternativo A1.
+	\newAlternative{A1: El presupuesto al cual pertenece la linea se encuentra en estado `Vendido'.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede modificar la linea de presupuesto ya que se encuentra en estado "Vendido".}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede modificar la linea de presupuesto ya que se utilizó en una venta.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
