--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
@@ -18,7 +18,7 @@
     \addCaseUseStep{ZMGestion borra la venta y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-    \newAlternative{A1: La venta indicada no se encuentra en estado "En edición".}{1} %Flujo alternativo A1.
+    \newAlternative{A1: La venta indicada no se encuentra en estado "En creación".}{1} %Flujo alternativo A1.
     \caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error informando que la venta no puede borrarse.}
     \caseUseRow{El escenario vuelve al punto 1.}
