--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex
@@ -1,48 +1,44 @@
 
-\renewcommand{\caseUseShortName}{} %cammelCase name
+\renewcommand{\caseUseShortName}{modificarLineaOrdenProduccion} %cammelCase name
 
-\renewcommand{\caseUseCreated}{15/02/2020} %Fecha creación
-\renewcommand{\caseUseModified}{15/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CU - } %{\CUcammelCase - Title}
+\renewcommand{\caseUseCreated}{04/03/2020} %Fecha creación
+\renewcommand{\caseUseModified}{04/03/2020} %Fecha modificación
+\renewcommand{\caseUseName}{\CUmodificarLineaOrdenProduccion - Modificar línea de orden de producción} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{} %Resumen
-\renewcommand{\caseUsePeople}{} %Actor: Meta
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion modificar una línea de orden de producción.} %Resumen
+\renewcommand{\caseUsePeople}{Administradores: desea modificar una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber iniciado sesión en el sistema.} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasOrdenProduccion (Listar lineas de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
-    \addCaseUseStep{}
+    \addCaseUseStep{El administrador indica la línea de orden de producción que desea modificar.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos de la linea de orden de producción seleccionada, producto, tela, lustre y cantidad a producirse.}
+    \addCaseUseStep{El administrador modifica el producto, tela, lustre y cantidad a producirse.}
+    \addCaseUseStep{ZMGestion modifica la línea de orden de producción y muestra un mensaje indicando el éxito de la operación.}
+
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: Error al .}{NUMERO} %Flujo alternativo A1.
-	\caseUseRow{La secuencia A1 comienza luego del punto NUMERO del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
+	\newAlternative{A1: La línea de orden de producción seleccionada no se encuentra en estado de `Pendiente de producción'.}{1} %Flujo alternativo A1.
+	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMgestion muestra un mensaje de error indicando que la línea de orden de producción no puede modificarse.}
+    \caseUseRow{El escenario vuelve al punto 1.}
     
     \caseUseRow{}
 
-	\newAlternative{A2: Error al .}{NUMERO} %Flujo alternativo A2.
-    \caseUseRow{La secuencia A2 comienza luego del punto NUMERO del escenario principal.}%¡Indicar número paso!
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
-    \alternativeRow{}
+	\newAlternative{A2: La cantidad a producirse es menor o igual que cero.}{3} %Flujo alternativo A2.
+    \caseUseRow{La secuencia A2 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que la cantidad a producirse debe ser mayor que cero.}
+    \caseUseRow{El escenario vuelve al punto 2.}
+    \caseUseRow{}
+
+    \newAlternative{A3: Existe una línea de orden de producción, producto, tela y lustre, igual en la orden de producción.}{3} %Flujo alternativo A2.
+    \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ya existe una línea de orden de producción identica en la orden de producción.}
+    \caseUseRow{El escenario vuelve al punto 2.}
+    \caseUseRow{}
 }
 \renewcommand{\caseUseRequirementsGUI}{
 	\caseUseRow{Teclado, Mouse y Pantalla} %Requisitos interfaz de usuario
